--- a/burgers.html
+++ b/burgers.html
@@ -57,21 +57,21 @@
                <div class="container1">
                   <div class="pizza-photo">
                      <img src="img/gamburger.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Гамбургер</strong></p>
+                     <p class="pizza-name"><strong>Гамбургер - 50грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/cheeseburger.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Чізбургер</storng></p>
+                     <p class="pizza-name"><storng>Чізбургер - 45грн</storng></p>
                   </div>
                </div>
                <div class="container2">
                   <div class="pizza-photo">
                      <img src="img/chikenburger.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Чікен бургер</strong></p>
+                     <p class="pizza-name"><strong>Чікен бургер - 45грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/vegetarianburger.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Вегетаріанський бургер</storng></p>
+                     <p class="pizza-name"><storng>Вегетаріанський бургер - 40 грн</storng></p>
                   </div>
                </div>
             </div>
