--- a/deserts.html
+++ b/deserts.html
@@ -57,21 +57,21 @@
                <div class="container1">
                   <div class="pizza-photo">
                      <img src="img/tiramisu.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Тірамісу</strong></p>
+                     <p class="pizza-name"><strong>Тірамісу - 40грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/cheesecake.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Чізкейк</storng></p>
+                     <p class="pizza-name"><storng>Чізкейк - 40грн</storng></p>
                   </div>
                </div>
                <div class="container2">
                   <div class="pizza-photo">
                      <img src="img/chocolatecake.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Шоколадний торт</strong></p>
+                     <p class="pizza-name"><strong>Шоколадний торт - 70грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/fruitsalad.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Фруктовий салат</storng></p>
+                     <p class="pizza-name"><storng>Фруктовий салат - 30грн</storng></p>
                   </div>
                </div>
             </div>
@@ -79,21 +79,21 @@
                <div class="container3">
                   <div class="pizza-photo">
                      <img src="img/kanoli.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Канолі</strong></p>
+                     <p class="pizza-name"><strong>Канолі - 30грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/icecream.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Морозиво</storng></p>
+                     <p class="pizza-name"><storng>Морозиво - 25грн</storng></p>
                   </div>
                </div>
                <div class="container4">
                   <div class="pizza-photo">
                      <img src="img/panakota.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Панакота</strong></p>
+                     <p class="pizza-name"><strong>Панакота - 30грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/profiteroli.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Профітеролі</storng></p>
+                     <p class="pizza-name"><storng>Профітеролі - 30грн</storng></p>
                   </div>
                </div>
             </div>
