--- a/napoj.html
+++ b/napoj.html
@@ -57,21 +57,21 @@
                <div class="container1">
                   <div class="pizza-photo">
                      <img src="img/cola.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Кола</strong></p>
+                     <p class="pizza-name"><strong>Кола - 15грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/lemonade.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Лимонад</storng></p>
+                     <p class="pizza-name"><storng>Лимонад - 10грн</storng></p>
                   </div>
                </div>
                <div class="container2">
                   <div class="pizza-photo">
                      <img src="img/tea.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Чай</strong></p>
+                     <p class="pizza-name"><strong>Чай -10грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/coffee.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Кава</storng></p>
+                     <p class="pizza-name"><storng>Кава - 15грн</storng></p>
                   </div>
                </div>
             </div>
@@ -79,21 +79,21 @@
                <div class="container3">
                   <div class="pizza-photo">
                      <img src="img/juice.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Сік</strong></p>
+                     <p class="pizza-name"><strong>Сік - 15грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/water.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Вода</storng></p>
+                     <p class="pizza-name"><storng>Вода - 10грн</storng></p>
                   </div>
                </div>
                <div class="container4">
                   <div class="pizza-photo">
                      <img src="img/beer.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Пиво</strong></p>
+                     <p class="pizza-name"><strong>Пиво - 25грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/wine.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Вино</storng></p>
+                     <p class="pizza-name"><storng>Вино - 30грн</storng></p>
                   </div>
                </div>
             </div>
