--- a/pizzas.html
+++ b/pizzas.html
@@ -57,21 +57,21 @@
                <div class="container1">
                   <div class="pizza-photo">
                      <img src="img/pepperoni.jpg" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Пепероні</strong></p>
+                     <p class="pizza-name"><strong>Пепероні - 90грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/hawaii.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Гавайська</storng></p>
+                     <p class="pizza-name"><storng>Гавайська - 90грн</storng></p>
                   </div>
                </div>
                <div class="container2">
                   <div class="pizza-photo">
                      <img src="img/margarita.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Маргарита</strong></p>
+                     <p class="pizza-name"><strong>Маргарита - 90грн</strong></p>
                   </div>
                   <div class="pizza-photo">
-                     <img src="img/mushroom.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Грибна</storng></p>
+                     <img src="img/4cheese.jpg" alt="" class="pizza">
+                     <p class="pizza-name"><storng>4 Сира - 90грн</storng></p>
                   </div>
                </div>
             </div>
@@ -79,21 +79,21 @@
                <div class="container3">
                   <div class="pizza-photo">
                      <img src="img/bbq.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>BBQ</strong></p>
+                     <p class="pizza-name"><strong>BBQ - 110грн</strong></p>
                   </div>
                   <div class="pizza-photo">
-                     <img src="img/4cheese.jpg" alt="" class="pizza">
-                     <p class="pizza-name"><storng>4 Сира</storng></p>
+                     <img src="img/mushroom.png" alt="" class="pizza">
+                     <p class="pizza-name"><storng>Грибна - 110грн</storng></p>
                   </div>
                </div>
                <div class="container4">
                   <div class="pizza-photo">
                      <img src="img/vegetarian.png" alt="" class="pizza">
-                     <p class="pizza-name"><strong>Вегетаріанська</strong></p>
+                     <p class="pizza-name"><strong>Вегетаріанська - 110грн</strong></p>
                   </div>
                   <div class="pizza-photo">
                      <img src="img/meat-lovers.png" alt="" class="pizza">
-                     <p class="pizza-name"><storng>Meat Lovers</storng></p>
+                     <p class="pizza-name"><storng>Meat Lovers - 110грн</storng></p>
                   </div>
                </div>
             </div>
